Fixes #38 - Java 11 issues with build Fixes #36 - Upgrade to latest Karaf is also included
Signed-off-by: anierbeck <bcanhome@googlemail.com>